[gd_scene load_steps=11 format=3 uid="uid://b4v4gi3aqtxcq"]

[ext_resource type="Script" uid="uid://c4uqyhdycy8m7" path="res://Scenes/Scene.gd" id="1_p75jc"]
[ext_resource type="Script" uid="uid://bi2i3rdg2gxb5" path="res://Scenes/terrain.gd" id="2_4yr6h"]
[ext_resource type="Texture2D" uid="uid://ddyvg8m37p4gk" path="res://Scenes/Assets/Pixel Skies/Starry Sky/Starry Sky 8 Blended.png" id="2_qswnl"]
[ext_resource type="Texture2D" uid="uid://bohwdtkx8dfgg" path="res://Actions/Cursors/Move.png" id="2_v3fvj"]
[ext_resource type="Script" uid="uid://bu8871w4nhu7m" path="res://Scenes/Actors/Actor.gd" id="3_d84kf"]
[ext_resource type="Texture2D" uid="uid://c64neds4r5g3a" path="res://Scenes/Actors/Knight/knight0.png" id="7_s7xl2"]
[ext_resource type="Texture2D" uid="uid://uytyfqs6arki" path="res://Scenes/Actors/Knight/knight1.png" id="8_g6k5w"]
[ext_resource type="Texture2D" uid="uid://bktc56e2yvura" path="res://Scenes/Actors/Knight/knight2.png" id="9_347al"]
[ext_resource type="Texture2D" uid="uid://1ai0al8lyjms" path="res://Scenes/Actors/Knight/knight3.png" id="10_xxbjm"]
[ext_resource type="Texture2D" uid="uid://b1l7u3itw2qn7" path="res://Scenes/Actors/Knight/knight4.png" id="11_m02t5"]

[node name="Scene" type="Node2D"]
script = ExtResource("1_p75jc")

[node name="MovePath" type="Line2D" parent="."]
z_index = 11
width = 1.0
default_color = Color(1, 1, 1, 0.498039)

[node name="ParallaxLayer" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.1, 0)
scroll_offset = Vector2(256, 144)
repeat_size = Vector2(307.2, 0)
autoscroll = Vector2(1, 0)
repeat_times = 5

[node name="ScatteredCloudsSky" type="Sprite2D" parent="ParallaxLayer"]
texture_filter = 2
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_qswnl")

[node name="ActionPlayer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="ActionCursor" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_v3fvj")

[node name="Terrain" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_4yr6h")
load_file = "test1"
metadata/_custom_type_script = ExtResource("2_4yr6h")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Debug" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FPS" type="Label" parent="CanvasLayer/Debug"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Combat" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Action" type="Button" parent="CanvasLayer/Combat"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
focus_mode = 0
text = "Action"

[node name="ActionsMenu" type="PopupMenu" parent="CanvasLayer/Combat"]
unique_name_in_owner = true
initial_position = 1

[node name="Actors" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Gob" type="Node2D" parent="Actors"]
script = ExtResource("3_d84kf")
max_health = 1
alignement = "Goblins"
actions = Array[String](["move", "blood_ritual"])
sprites = Array[Texture2D]([ExtResource("7_s7xl2"), ExtResource("8_g6k5w"), ExtResource("9_347al"), ExtResource("10_xxbjm"), ExtResource("11_m02t5")])
metadata/_custom_type_script = ExtResource("3_d84kf")

[node name="Actor" type="Node2D" parent="Actors"]
script = ExtResource("3_d84kf")
max_health = 1
alignement = "Player"
actions = Array[String](["move", "blood_ritual"])
sprites = Array[Texture2D]([ExtResource("7_s7xl2"), ExtResource("8_g6k5w"), ExtResource("9_347al"), ExtResource("10_xxbjm"), ExtResource("11_m02t5")])
metadata/_custom_type_script = ExtResource("3_d84kf")

[connection signal="pressed" from="CanvasLayer/Combat/Action" to="." method="_on_action_pressed"]
[connection signal="index_pressed" from="CanvasLayer/Combat/ActionsMenu" to="." method="_on_actions_menu_index_pressed"]
[connection signal="popup_hide" from="CanvasLayer/Combat/ActionsMenu" to="." method="_on_actions_menu_popup_hide"]
